--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
         "prepare": "husky install",
         "lint": "biome check src --write",
         "lint:staged": "biome check src --write --staged",
-        "lint:change": "biome check src --write --changed",
+        "lint:changed": "biome check src --write --changed",
         "lint-staged": "lint-staged",
         "test": "vitest run",
-        "test:change": "vitest run --changed",
+        "test:changed": "vitest run --changed",
         "test:ui": "vitest --ui",
         "test:watch": "vitest watch",
         "test:coverage": "vitest run --coverage",
