--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
         "size-limit": "^11.1.6",
         "ts-node": "^10.9.2",
         "tsup": "^8.3.5",
-        "typedoc": "^0.27.1",
+        "typedoc": "~0.26.11",
         "typedoc-material-theme": "^1.2.0",
         "typedoc-plugin-include-example": "^2.0.2",
         "typedoc-plugin-inline-sources": "^1.1.0",
