--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
         "typedoc-plugin-missing-exports": "^3.1.0",
         "typedoc-plugin-rename-documents": "^1.0.0",
         "typedoc-plugin-replace-text": "^4.0.0",
-        "typescript": "^5.7.2",
+        "typescript": "~5.6.3",
         "vitest": "^2.1.6"
     },
     "keywords": ["lurna", "date", "utility", "fns", "nodejs", "browser", "农历", "阴历", "公历"],
