--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,7 @@
         "defaultBranch": "master"
     },
     "files": {
-        "ignore": ["dist"],
+        "ignore": ["dist", "build"],
         "ignoreUnknown": false
     },
     "formatter": {
