--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,5 @@
         "transpileOnly": true
     },
     "include": ["src"],
-    "exclude": ["node_modules", "dist"]
+    "exclude": ["node_modules", "dist", "build", "scripts"]
 }
