--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@kabeep/forex",
     "description": "A JavaScript foreign exchange library via fawazahmed0's API",
-    "version": "1.0.0-alpha",
+    "version": "1.0.0",
     "main": "./dist/index.cjs",
     "module": "./dist/index.mjs",
     "types": "./dist/index.d.ts",
